--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'com.commonsware.cwac:merge:1.1.+'
 }
 
 repositories {
