--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,7 +46,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.himanshubahuguna.android.popularmovieshb.MainActivity" />
         </activity>
-
+        <activity
+            android:name=".FavoritesActivity"
+            android:label="@string/activity.favorites.title"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.himanshubahuguna.android.popularmovieshb.MainActivity" />
+        </activity>
         <provider
             android:name=".data.MovieProvider"
             android:authorities="com.himanshubahuguna.android.popularmovieshb"
